# grad_proj

./: .gitignore  Dockerfile  README.md  app.py  config.py  dqn_task_scheduler.weights.h5  project.ipynb  pyproject.toml  req.txt  requirements.txt  suitability_model_checkpoint.pkl  suitability_training_data.csv
models/: AI_Personalization_Schedule_Planner_Core_Model.py  rl_agent.py
routes/: breaks.py  notifications.py  planner.py  schedule.py  settings.py  tasks.py  users.py
