[project]
name = "grad-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "abdallah"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "db (>=0.1.1,<0.2.0)",
    "mysql (>=0.0.3,<0.0.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
